--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
     <title>My Awesome Company Contact Page</title>
   </head>
   <body>
-
     <h1>Company Inc.</h1>
     <h2>For all your incorporated company needs</h2>
 
     <!-- Create an iframe tag-->
-
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1874.5174514628904!2d-122.33562477565953!3d47.646069028761666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901502b25bb07f%3A0x1e6e55abec496196!2sGas%20Works%20Park!5e0!3m2!1sen!2sus!4v1614627691413!5m2!1sen!2sus"
+      width="100%"
+      height="400px"
+      style="border: 1"
+      allowfullscreen=""
+      loading="lazy"
+    ></iframe>
   </body>
 </html>
